--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "framer-motion": "^10.12.21",
     "leaflet": "^1.9.4",
     "next": "13.4.9",
     "next-auth": "^4.22.1",
